--- a/user/manual/fr/personnalisations/index.html
+++ b/user/manual/fr/personnalisations/index.html
@@ -127,15 +127,13 @@
 			<div class="page_content">
 <h3>Personnalisations Incluses dans cette Application</h3>
 
-<h6>Adresse</h6>
+<h4>Adresse</h4>
 
 <p>Le champ "État" (County) est masqué par défaut.</p>
 
-<h6>Facture de vente</h6>
+<h4>Facture de vente</h4>
 
-<ol>
-<li>Ajout d'une nouvelle section "Informations de Référence" avec les champs:</li>
-</ol>
+<p>A. Ajout d'une nouvelle section "Informations de Référence" avec les champs:</p>
 
 <ul>
 <li>Référence : Référence de la facture</li>
@@ -144,9 +142,7 @@
 
 <p>Ces deux champs sont affichées sur la format d'impression de la facture.</p>
 
-<ol>
-<li>Ajout d'une case "Imprimer les Rabais par Article"</li>
-</ol>
+<p>B. Ajout d'une case "Imprimer les Rabais par Article"</p>
 
 <p>En cochant cette case, le format d'impression affiche les pourcentages de remise accordés pour chaque article dans le tableau.</p>
 
