--- a/user/manual/fr/formats d'impression/index.html
+++ b/user/manual/fr/formats d'impression/index.html
@@ -139,9 +139,9 @@ S'ils ne sont pas remplis, ils n'apparaissent pas sur la facture.</p></li>
 Pour la Suisse, le format de base est le suivant:</p></li>
 </ul>
 
-<p><code>
-    {{ address_line1 }}&lt;br&gt;{{ city }}&lt;br&gt;  
-    {{ country }}
+<p><code>html
+{{ address_line1 }}&lt;br&gt;{{ city }}&lt;br&gt;  
+{{ country }}
 </code>  </p>
 
 <p>Ce format est installé automatiquement lors de l'installation de l'application.
@@ -155,11 +155,8 @@ Dans ce cas une colonne additionnelle "Rabais" apparaîtra dans votre tableau d'
 <li><p>Le libellé de TVA est celui de la désignation de la ligne de TVA-Frais.
 Pour la TVA, il est configurable dans le module "Comptes" &gt; "Modèle de Taxes et Frais de Vente"</p></li>
 <li><p>Tous les nombres sont arrondis à 2 décimales, indépendamment des réglages généraux d'ERPNext.</p></li>
+<li><p>Le Total Général ou "Total" est arrondi à 2 décimales, à 5 centimes près.</p></li>
 </ul>
-
-<ol>
-<li>Le Total Général ou "Total" est arrondi à 2 décimales, à 5 centimes près.</li>
-</ol>
 
 </div>
 		</div>
