--- a/user/manual/fr/formats d'impression/index.html
+++ b/user/manual/fr/formats d'impression/index.html
@@ -135,14 +135,8 @@
 <li><p>Il propose deux champs additionnels nommés "Référence" et "Sujet".
 Ceux-ci sont accessibles dans la section "Informations de Référence" de la facture de vente.
 S'ils ne sont pas remplis, ils n'apparaissent pas sur la facture.</p></li>
-<li><p>Il imprime l'adresse du client suivant le format défini dans le "Modèle d'Adresse" du pays.
-Pour la Suisse, le format de base est le suivant:</p></li>
+<li><p>Il imprime l'adresse du client suivant le format défini dans le "Modèle d'Adresse" du pays.</p></li>
 </ul>
-
-<p><code>html
-{{ address_line1 }}&lt;br&gt;{{ city }}&lt;br&gt;  
-{{ country }}
-</code>  </p>
 
 <p>Ce format est installé automatiquement lors de l'installation de l'application.
 Vous pouvez bien évidemment le modifier dans les modèles d'adresse d'ERPNext.</p>
