--- a/user/manual/fr/formats d'impression/index.html
+++ b/user/manual/fr/formats d'impression/index.html
@@ -149,6 +149,7 @@ Dans ce cas une colonne additionnelle "Rabais" apparaîtra dans votre tableau d'
 <li><p>Le libellé de TVA est celui de la désignation de la ligne de TVA-Frais.
 Pour la TVA, il est configurable dans le module "Comptes" &gt; "Modèle de Taxes et Frais de Vente"</p></li>
 <li><p>Tous les nombres sont arrondis à 2 décimales, indépendamment des réglages généraux d'ERPNext.</p></li>
+<li><p>Le format d'impression des devises est également indépendant des réglages généraux d'ERPNext: X'XXX.XX</p></li>
 <li><p>Le Total Général ou "Total" est arrondi à 2 décimales, à 5 centimes près.</p></li>
 </ul>
 
